--- a/ProfileSample/Views/Home/Index.cshtml
+++ b/ProfileSample/Views/Home/Index.cshtml
@@ -7,11 +7,11 @@
 }
 
 <div class="row">
-    @foreach (var item in Model)
+    @foreach (var img in Model)
     {
-        var converted = Convert.ToBase64String(item.Data);
-        var imgSrc = string.Format("data:image/jpg;base64,{0}", converted);
-
-        <img src="@imgSrc" width="300" height="150"/>
+        <img src="@Url.Action("Image","Home", new { id = img.Id })"
+             alt="@img.Name"
+             class="img-responsive" />
+        <p>@img.Name</p>
     }
 </div>
